--- a/index.html
+++ b/index.html
@@ -1,21 +1,202 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
-    <title>Gokul's Profile</title>
+    <title>Gokul Krish</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
 </head>
-<body class="overflow-hidden bg-linear-to-r from-cyan-500 to-blue-500">
-    <div class="h-screen w-screen flex justify-center items-center">
-        <div class="text-center text-white">
-            <p class="text-3xl font-bold">Under Construction !</p>
-            <p class="text-2xl mb-2 ">Please Come Later !</p>
-            <a href="mailto:itsgokul2002@gmail.com" class="flex justify-center">
-                <svg style="height: 18px;" class="mr-2 mb-0 mt-1 fill-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M48 64C21.5 64 0 85.5 0 112c0 15.1 7.1 29.3 19.2 38.4L236.8 313.6c11.4 8.5 27 8.5 38.4 0L492.8 150.4c12.1-9.1 19.2-23.3 19.2-38.4c0-26.5-21.5-48-48-48L48 64zM0 176L0 384c0 35.3 28.7 64 64 64l384 0c35.3 0 64-28.7 64-64l0-208L294.4 339.2c-22.8 17.1-54 17.1-76.8 0L0 176z"/></svg>
-                <span>itsgokul2002@gmail.com</span>
-            </a>
+
+<body class="bg-black text-white font-sans">
+
+    <section class="h-[75vh] flex flex-col items-center justify-center text-3xl font-bold text-center md:text-5xl md:h-screen">
+        <h1 id="hero-text" class="opacity-0">🚀 Hi, I'm <span class="text-green-400">Gokul Krish</span></h1>
+        <p id="hero-subtext" class="opacity-0 text-xl text-gray-300 mt-0 md:text-2xl md:mt-4">Web Developer | Tech Enthusiast</p>
+    </section>
+
+
+    <section id="scroll-container" class="h-[50vh] flex items-center bg-black overflow-hidden relative md:h-screen">
+        <div id="side-scroll" class="whitespace-nowrap text-3xl font-bold absolute left-[50px] md:left-[250px] md:text-7xl">
+            Hey this is the side content → More text here → Keep scrolling → It's still going →
         </div>
+    </section>
+
+
+
+
+    <section class="py-20 bg-black text-center">
+        <h2 class="text-4xl font-bold mb-8">💡 Skills</h2>
+
+        <div class="w-3/4 mx-auto space-y-6">
+            <div class="text-left">
+                <p class="text-lg">JavaScript</p>
+                <div class="bg-gray-700 h-2 rounded">
+                    <div class="bg-green-400 h-2 rounded w-0 skill-bar" data-skill="90"></div>
+                </div>
+            </div>
+            <div class="text-left">
+                <p class="text-lg">React.js</p>
+                <div class="bg-gray-700 h-2 rounded">
+                    <div class="bg-blue-400 h-2 rounded w-0 skill-bar" data-skill="85"></div>
+                </div>
+            </div>
+            <div class="text-left">
+                <p class="text-lg">Node.js</p>
+                <div class="bg-gray-700 h-2 rounded">
+                    <div class="bg-yellow-400 h-2 rounded w-0 skill-bar" data-skill="80"></div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="py-20 bg-black text-center">
+        <h2 class="text-4xl font-bold mb-8">📌 Work Experience</h2>
+        <div class="w-3/4 mx-auto space-y-8">
+            <div class="timeline-item opacity-0">
+                <h3 class="text-xl font-semibold">🚀 Software Engineer - Amazon</h3>
+                <p class="text-gray-400">2023 - Present</p>
+                <p>Worked on scalable backend services using Node.js & AWS.</p>
+            </div>
+            <div class="timeline-item opacity-0">
+                <h3 class="text-xl font-semibold">💻 Frontend Developer - XYZ</h3>
+                <p class="text-gray-400">2021 - 2023</p>
+                <p>Built interactive UIs with React & GSAP animations.</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="h-screen flex items-center justify-center text-3xl bg-black">
+        let change things tomorrow !
+    </section>
+
+    <div id="loading-screen"
+        class="fixed inset-0 flex flex-col items-center justify-center bg-gray-900 text-white z-50">
+        <p id="loading-text" class="text-3xl font-bold">Just hang in there...</p>
     </div>
+
+
+
+    <script>
+        gsap.registerPlugin(ScrollTrigger);
+
+        gsap.to(".opacity-0", {
+            opacity: 1,
+            y: -50,
+            duration: 1.5,
+            ease: "power2.out",
+            scrollTrigger: {
+                trigger: ".opacity-0",
+                start: "top 80%",
+                toggleActions: "play none none none"
+            }
+        });
+
+        gsap.to(".h-screen:first-child", {
+            yPercent: -20,
+            scrollTrigger: {
+                trigger: ".h-screen:first-child",
+                start: "top top",
+                scrub: true
+            }
+        });
+
+
+        gsap.to("#hero-text", {
+            opacity: 1,
+            scale: 1.2,
+            duration: 1.5,
+            ease: "power2.out"
+        });
+
+        gsap.to("#hero-subtext", {
+            opacity: 1,
+            y: -20,
+            duration: 1.5,
+            delay: 0.5,
+            ease: "power2.out"
+        });
+
+        gsap.to(".skill-bar", {
+            width: (i, el) => el.getAttribute("data-skill") + "%",
+            duration: 1.5,
+            ease: "power2.out",
+            scrollTrigger: {
+                trigger: ".skill-bar",
+                start: "top 80%",
+                toggleActions: "play none none none"
+            }
+        });
+
+        gsap.to(".timeline-item", {
+            opacity: 1,
+            y: -20,
+            duration: 1.5,
+            stagger: 0.3,
+            scrollTrigger: {
+                trigger: ".timeline-item",
+                start: "top 80%",
+                toggleActions: "play none none none"
+            }
+        });
+    </script>
+    <script>
+        gsap.to("#side-scroll", {
+            x: "-100%",
+            ease: "power1.inOut",
+            scrollTrigger: {
+                trigger: "#scroll-container",
+                start: "top top",
+                end: "+=200%",
+                scrub: true,
+                pin: true
+            }
+        });
+
+        gsap.from("#side-scroll", {
+            opacity: 0,
+            scale: 0.8,
+            duration: 1.5,
+            scrollTrigger: {
+                trigger: "#scroll-container",
+                start: "top 80%",
+                toggleActions: "play none none reverse"
+            }
+        });
+
+        gsap.to("#scroll-container", {
+            backgroundPositionX: "-20%",
+            ease: "power1.inOut",
+            scrollTrigger: {
+                trigger: "#scroll-container",
+                start: "top top",
+                end: "+=100%",
+                scrub: 0.5
+            }
+        });
+
+    </script>
+
+    <script>
+        gsap.to("#loading-text", {
+            opacity: 0,
+            repeat: -1,
+            yoyo: true,
+            duration: 1.2,
+            ease: "power1.inOut"
+        });
+
+        window.addEventListener("load", () => {
+            gsap.to("#loading-screen", {
+                opacity: 0,
+                duration: 2,
+                ease: "power2.out",
+                onComplete: () => document.getElementById("loading-screen").remove()
+            });
+        });
+
+    </script>
 </body>
+
 </html>
