--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gokul Krish</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://unpkg.com/@studio-freight/lenis@1.0.42/dist/lenis.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+    <link rel="shortcut icon" href="fav.png" type="image/x-icon">
 </head>
 
 <body class="bg-black text-white font-sans">
 
-    <section class="h-[100vh] flex flex-col items-center justify-center text-3xl font-bold text-center md:text-5xl md:h-screen">
+    <section
+        class="h-[100vh] flex flex-col items-center justify-center text-3xl font-bold text-center md:text-5xl md:h-screen">
         <h1 id="hero-text" class="opacity-0">🚀 Hi, I'm <span class="text-green-400">Gokul Krish</span></h1>
         <p id="hero-subtext" class="opacity-0 text-xl text-gray-300 pt-[40px] md:text-2xl md:mt-4">Web Developer | Tech
             Enthusiast</p>
@@ -20,7 +23,7 @@
 
     <section id="scroll-container-1" class="h-[75vh] flex items-center overflow-hidden relative">
         <div id="side-scroll-1"
-            class="flex space-x-32 px-[15%] font-bold absolute left-0 w-[99vw] flex-col justify-center item-center text-center">
+            class="flex space-x-32 px-[15%] font-bold absolute left-0 w-[100vw] flex-col justify-center item-center text-center">
             <span>
                 <span class="text-[24px] md:text-3xl"> Web Development is like a Song !!</span> <br><br>
                 <span class="text-[18px] md:text-2xl">
@@ -34,76 +37,144 @@
 
     <section id="scroll-container-2" class="h-[75vh] flex items-center overflow-hidden relative">
         <div id="side-scroll-2"
-            class="flex space-x-32 text-[24px] px-[15%] font-bold absolute right-0 w-[99vw] flex justify-center text-center md:text-4xl">
-            💻 2+ Years Crafting Scalable Web Apps at <br> Q Brainstorm Software
+            class="text-[24px] px-[15%] font-bold absolute right-0 w-[100vw] text-center md:text-4xl">
+            <p>💻 2+ Years Crafting Scalable Web Apps at</p>
+            <p class="text-blue-400">Q Brainstorm Software</p>
         </div>
     </section>
 
     <section id="scroll-container-3" class="h-[75vh] flex items-center overflow-hidden relative">
         <div id="side-scroll-3"
-            class="flex space-x-32 text-[24px] px-[15%] font-bold absolute left-0 w-[99vw] flex justify-center text-center md:text-4xl">
-            🎓 Kashiv Infotech Internship: From Intern to Innovator in 6 Months
+            class="text-[24px] px-[15%] font-bold absolute left-0 w-[100vw] text-center md:text-4xl">
+            <p>🎓 From Intern to Innovator in 6 Months at</p>
+            <p class="text-green-400">Kashiv Infotech Internship</p>
         </div>
     </section>
 
     <section id="scroll-container-4" class="h-[75vh] flex items-center overflow-hidden relative">
         <div id="side-scroll-4"
-            class="flex space-x-32 text-[24px] px-[15%] font-bold absolute right-0 w-[99vw] flex justify-center text-center md:text-4xl">
-            🛠️ Turning Ideas into Reality with HTML, CSS, JavaScript & PHP
+            class="text-[24px] px-[15%] font-bold absolute right-0 w-[100vw] text-center md:text-4xl">
+            <p class="text-[30px] md:text-5xl mb-[18px]">🛠️ Turning Ideas into Reality with</p>
+            <p class="text-[24px] md:text-4xl">
+                <span class="text-[#f26426]">HTML</span>,
+                <span class="text-[#298fd9]">CSS</span>,
+                <span class="text-[#f6ce01]">JavaScript</span> &
+                <span class="text-[#7d4ee5]">PHP</span>
+            </p>
         </div>
     </section>
 
     <section id="scroll-container-5" class="h-[75vh] flex items-center overflow-hidden relative">
-        <div id="side-scroll-5"
-            class="flex space-x-32 text-[24px] px-[15%] font-bold absolute left-0 w-[99vw] flex justify-center text-center md:text-4xl">
-            ⚙️ Mastering Frameworks: React, Angular, CodeIgniter & More
+        <div id="side-scroll-5" class="px-[15%] font-bold absolute left-0 w-[100vw] text-center">
+            <p class="text-[30px] md:text-5xl mb-[18px]">🏹 Mastering Frameworks</p>
+            <p class="text-[24px] md:text-4xl">
+                <span class="text-[#45d8ff]">React</span>,
+                <span class="text-[#ff4755]">Angular</span>,
+                <span class="text-[#ff6e3c]">CodeIgniter</span> &
+                More!
+            </p>
         </div>
     </section>
 
     <section id="scroll-container-6" class="h-[75vh] flex items-center overflow-hidden relative">
         <div id="side-scroll-6"
-            class="flex space-x-32 text-[24px] px-[15%] font-bold absolute right-0 w-[99vw] flex justify-center text-center md:text-4xl">
-            🎨 Designing Seamless UIs with Bootstrap, Tailwind & jQuery
+            class="text-[24px] px-[15%] font-bold absolute right-0 w-[100vw] text-center md:text-4xl">
+            <p class="text-[30px] md:text-5xl mb-[18px]">🎨 Designing Seamless UIs with</p>
+            <p class="text-[24px] md:text-4xl">
+                <span class="text-[#b85afe]">Bootstrap</span>,
+                <span class="text-[#5bbaff]">Tailwind</span> &
+                <span class="text-[#397af6]">jQuery</span>
+            </p>
         </div>
     </section>
 
 
     <section class="py-20 text-center md:h-screen" id="projects_container">
-        <h2 class="text-4xl font-bold mb-[100px]">🚀 Projects</h2>
+        <h2 class="text-4xl font-bold mb-[100px]">🚀 Project Experiences</h2>
         <div class="grid grid-cols-1 md:grid-cols-3 gap-8 w-3/4 mx-auto">
-            <div class="p-6 bg-gray-700 rounded-lg hover:scale-105 transition-transform mt-[20px]" id="project_1">
+            <div class="p-6 rounded-lg border-2 border-gray-500 hover:scale-105 transition-transform mt-[20px]"
+                id="project_1">
                 <h3 class="text-xl font-semibold">CMS Platform</h3>
                 <p class="text-gray-300">Built a scalable CMS for managing content efficiently.</p>
             </div>
-            <div class="p-6 bg-gray-700 rounded-lg hover:scale-105 transition-transform mt-[20px]" id="project_2">
+            <div class="p-6 rounded-lg border-2 border-gray-500 hover:scale-105 transition-transform mt-[20px]"
+                id="project_2">
                 <h3 class="text-xl font-semibold">Fleet Management System</h3>
                 <p class="text-gray-300">Built a custom FMS with trip analysis and invoice generation and more !</p>
             </div>
-            <div class="p-6 bg-gray-700 rounded-lg hover:scale-105 transition-transform mt-[20px]" id="project_3">
+            <div class="p-6 rounded-lg border-2 border-gray-500 hover:scale-105 transition-transform mt-[20px]"
+                id="project_3">
                 <h3 class="text-xl font-semibold">HRMS Software</h3>
                 <p class="text-gray-300">Developed an HR platform with payroll & leave tracking and more !</p>
             </div>
-            <div class="p-6 bg-gray-700 rounded-lg hover:scale-105 transition-transform mt-[20px]" id="project_4">
+            <div class="p-6 rounded-lg border-2 border-gray-500 hover:scale-105 transition-transform mt-[20px]"
+                id="project_4">
                 <h3 class="text-xl font-semibold">ERP Software</h3>
                 <p class="text-gray-300">Worked in Building Scalable ERP Systems !</p>
             </div>
-            <div class="p-6 bg-gray-700 rounded-lg hover:scale-105 transition-transform mt-[20px]" id="project_5">
+            <div class="p-6 rounded-lg border-2 border-gray-500 hover:scale-105 transition-transform mt-[20px]"
+                id="project_5">
                 <h3 class="text-xl font-semibold">CRM</h3>
                 <p class="text-gray-300">📈 Optimizing Customer Relationships with CRM Solutions</p>
             </div>
         </div>
     </section>
 
-    <div class="fixed top-[50vh] left-[-25%] w-[150vw] h-[150vh] opacity-100 bg-[linear-gradient(transparent,transparent,#000000)] hidden md:block"></div>
+    <section id="featured-website" class="py-20 text-center">
+        <h2 class="text-4xl font-bold mb-12">🌐 Featured Website</h2>
+
+        <div class="w-3/4 mx-auto">
+            <img src="lgtindia.jpg" alt="Website Preview" class="rounded-lg shadow-lg">
+        </div>
+
+        <div class="mt-6 text-gray-300">
+            <h3 class="text-2xl font-semibold">Corporate Business Website</h3>
+            <p class="mt-4 px-12">
+                A vibrant and user-friendly tour company website, designed to showcase travel packages, destinations, and services with a modern UI. Built to inspire travelers and enhance bookings effortlessly.
+            </p>
+
+            <div class="mt-8">
+                <a href="https://lgtindiajournez.com/" target="_blank"
+                    class="px-6 py-2 border-2 border-gray-700 hover:bg-gray-700 text-white duration-700 rounded-lg">Visit
+                    Website</a>
+            </div>
+        </div>
+    </section>
+
+
+
 
     <section class="py-20 text-center h-screen flex justify-center items-center">
         <div>
             <h2 class="text-4xl font-bold mb-8">📬 Let's Connect</h2>
             <p class="text-xl">Want to build something cool? Let's talk!</p>
-            <div class="mt-4 flex justify-center space-x-6 text-2xl">
-                <a href="#" class="hover:text-green-400">🔗 LinkedIn</a>
-                <a href="#" class="hover:text-green-400">💻 GitHub</a>
-                <a href="mailto:youremail@example.com" class="hover:text-green-400">✉️ Email</a>
+            <div class="mt-4 flex justify-center text-2xl">
+                <a href="https://www.linkedin.com/in/gokulkrish02/" target="_blank"
+                    class="hover:text-blue-400 flex items-center justify-center">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
+                        class="bi bi-linkedin" viewBox="0 0 16 16">
+                        <path
+                            d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z" />
+                    </svg>
+                    <span class="mb-1 ml-2">LinkedIn</span>
+                </a>
+                <a href="https://github.com/GokulKrish002/GokulKrish002" target="_blank"
+                    class="hover:text-blue-400 flex items-center justify-center mx-6">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
+                        class="bi bi-github" viewBox="0 0 16 16">
+                        <path
+                            d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8" />
+                    </svg>
+                    <span class="mb-1 ml-2">GitHub</span>
+                </a>
+                <a href="mailto:itsgokul2002@gmail.com" class="hover:text-blue-400 flex items-center justify-center">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
+                        class="bi bi-envelope-fill" viewBox="0 0 16 16">
+                        <path
+                            d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414zM0 4.697v7.104l5.803-3.558zM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586zm3.436-.586L16 11.801V4.697z" />
+                    </svg>
+                    <span class="mb-1 ml-2">Email</span>
+                </a>
             </div>
         </div>
     </section>
@@ -115,38 +186,70 @@
 
 
     <script>
-        gsap.registerPlugin(ScrollTrigger);
-        gsap.to("#hero-text", { opacity: 1, scale: 1.2, duration: 1.5, ease: "power2.out" });
-        gsap.to("#hero-subtext", { opacity: 1, y: -20, duration: 1.5, delay: 1, ease: "power2.out" });
-        const scroll_sections = [
-            { id: "#side-scroll-1", x: "-100%" }, // Right to Left
-            { id: "#side-scroll-2", x: "100%" },  // Left to Right
-            { id: "#side-scroll-3", x: "-100%" }, // Right to Left
-            { id: "#side-scroll-4", x: "100%" },   // Left to Right
-            { id: "#side-scroll-5", x: "-100%" },   // Left to Right
-            { id: "#side-scroll-6", x: "100%" },   // Left to Right
-        ];
+        document.addEventListener("DOMContentLoaded", function () {
 
-        scroll_sections.forEach((section, index) => {
-            gsap.to(section.id, {
-                x: section.x,
-                ease: "power1.inOut",
-                scrollTrigger: {
-                    trigger: `#scroll-container-${index + 1}`,
-                    start: "top top",
-                    end: "+=80%",
-                    scrub: true,
-                    pin: true
-                }
+            const lenis = new Lenis({
+                duration: 4,
+                easing: (t) => Math.min(1, 1.001 - Math.pow(2, -10 * t)),
+                smooth: true
             });
-        });
 
-        gsap.to("#loading-text", {
-            opacity: 0,
-            repeat: -1,
-            yoyo: true,
-            duration: 1.2,
-            ease: "power1.inOut"
+            function raf(time) {
+                lenis.raf(time);
+                requestAnimationFrame(raf);
+            }
+            requestAnimationFrame(raf);
+
+
+            gsap.registerPlugin(ScrollTrigger);
+            gsap.to("#hero-text", { opacity: 1, scale: 1.2, duration: 1.5, ease: "power2.out" });
+            gsap.to("#hero-subtext", { opacity: 1, y: -20, duration: 1.5, delay: 1, ease: "power2.out" });
+            const scroll_sections = [
+                { id: "#side-scroll-1", x: "-100%" },
+                { id: "#side-scroll-2", x: "100%" },
+                { id: "#side-scroll-3", x: "-100%" },
+                { id: "#side-scroll-4", x: "100%" },
+                { id: "#side-scroll-5", x: "-100%" },
+                { id: "#side-scroll-6", x: "100%" },
+            ];
+
+            scroll_sections.forEach((section, index) => {
+                gsap.to(section.id, {
+                    x: section.x,
+                    ease: "power1.inOut",
+                    scrollTrigger: {
+                        trigger: `#scroll-container-${index + 1}`,
+                        start: "top top",
+                        end: "+=80%",
+                        scrub: 4,
+                        pin: true
+                    }
+                });
+            });
+
+            gsap.to("#loading-text", {
+                opacity: 0,
+                repeat: -1,
+                yoyo: true,
+                duration: 1.2,
+                ease: "power1.inOut"
+            });
+
+            const projects = ["#project_1", "#project_2", "#project_3", "#project_4", "#project_5"];
+
+            gsap.fromTo(
+                projects,
+                { opacity: 0 },
+                {
+                    opacity: 1,
+                    duration: 2,
+                    ease: "power2.out",
+                    stagger: 0.3,
+                    scrollTrigger: {
+                        trigger: "#projects_container",
+                    },
+                }
+            );
         });
 
         window.addEventListener("load", () => {
@@ -157,22 +260,6 @@
                 onComplete: () => document.getElementById("loading-screen").remove()
             });
         });
-
-        const projects = ["#project_1", "#project_2", "#project_3", "#project_4", "#project_5"];
-
-        gsap.fromTo(
-            projects,
-            { opacity: 0 },
-            {
-                opacity: 1,
-                duration: 2,
-                ease: "power2.out",
-                stagger: 0.3,
-                scrollTrigger: {
-                    trigger: "#projects_container",
-                },
-            }
-        );
 
 
     </script>
